# instrument_template

./: .gitignore  .pre-commit-config.yaml  README.md  _correct_all_igrins_references.py  cookiecutter.json  noxfile.py  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: test_template.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  requirements.txt  ruff.toml
{{ cookiecutter.project_slug }}/.github/workflows/: lint.yml  testing.yml
{{ cookiecutter.project_slug }}/tests/: README.md  test_adclass.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.instrument_name }}_instruments/{{ cookiecutter.instrument_name }}/: __init__.py  adclass.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.instrument_name }}_instruments/{{ cookiecutter.instrument_name_lower }}/: README.md
{{ cookiecutter.project_slug }}/{{ cookiecutter.instrument_name }}dr/{{ cookiecutter.instrument_name }}/: parameters_{{ cookiecutter.instrument_name }}.py  parameters_{{ cookiecutter.instrument_name }}_echelle.py  primitives_{{ cookiecutter.instrument_name }}.py  primitives_{{ cookiecutter.instrument_name }}_echelle.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.instrument_name_lower }}/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.instrument_name_lower }}/{{ cookiecutter.instrument_name_lower }}/: lookup.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.instrument_name_lower }}_instruments/: __init__.py
(+11 files in other folders)
